# TextEditor

./: CMakeLists.txt
include/Core/: Cursor.hh  Selection.hh  TextBuffer.hh
include/Editor/: Editor.hh
include/Font/: FontData.hh  FontParser.hh  FontReader.hh
include/Input/: InputHandler.hh
include/Rendering/: GeometryUtils.hh  GlyphRenderer.hh  TextRenderer.hh  earcut.hpp
src/: main.cpp
src/Core/: Cursor.cpp  Selection.cpp  TextBuffer.cpp
src/Editor/: Editor.cpp
src/Font/: FontParser.cpp
src/Input/: InputHandler.cpp
src/Rendering/: GeometryUtils.cpp  GlyphRenderer.cpp  TextRenderer.cpp
